<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.gc.demoapp.operations.login.viewmodel.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_material_dark">


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lip_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@id/lip_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.requestLogin.user}"
                app:addTextChangedListener="@{viewModel.textChangedListenr}"
                android:textColorHint="#c1c2c4"
                android:inputType="textFilter"
                android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZ01234567890"
                android:textColor="@android:color/white"
                android:hint="@string/hint_et_login_user" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lip_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.requestLogin.password}"
                app:addTextChangedListener="@{viewModel.textChangedListenr}"
                android:maxLength="4"
                android:textColorHint="#c1c2c4"
                android:inputType="numberPassword"
                android:textColor="@android:color/white"
                android:hint="@string/hint_et_login_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{viewModel.doLogin}"
            android:enabled="@{viewModel.buttonEnabled}"
            android:background="@color/accent_material_dark"
            android:text="@string/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />
    </android.support.constraint.ConstraintLayout>
</layout>