...
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Nombre, Apellidos" />

        <com.gc.databinidingadapters.DataBindingListView
            android:id="@+id/lvProducts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:divider="@android:color/transparent"
            app:itemLayout="@layout/product_item"
...
